--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,17 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-imagick": "^3.4",
-        "blade-ui-kit/blade-icons": "^1.2",
-        "illuminate/contracts": "^8.0",
-        "illuminate/filesystem": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/view": "^8.0",
+        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/filesystem": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0",
+        "illuminate/view": "^8.0|^9.0",
         "numphp/numphp": "^1.2.0 ",
-        "symfony/console": "^5.3",
-        "symfony/finder": "^5.3"
+        "symfony/console": "^5.3|^6.0",
+        "symfony/finder": "^5.3|^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^6.0|^7.0",
         "phpunit/phpunit": "^9.5"
     },
     "bin": [
