--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,9 +2,14 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ main, dev-Test ]
+    branches: 
+    - main
+    - dev-Test
+    - Test
   pull_request:
-    branches: [ main ]
+    branches: 
+    - main
+    - dev-Test
 
 jobs:
   build:
