--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,10 +6,10 @@
 >
     <testsuites>
         <testsuite name="Blade Icons Test Suite">
-            <directory>tests</directory>
+            <directory>tests/bladeUiTests</directory>
         </testsuite>
     </testsuites>
     <php>
-        <env name="APP_ENV" value="blade-icons-testing"/>
+        <env name="APP_ENV" value="blade-icon-testing"/>
     </php>
 </phpunit>
