--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,8 +8,12 @@
         <testsuite name="Blade Icons Test Suite">
             <directory>tests/bladeUiTests</directory>
         </testsuite>
-    </testsuites>
+        <testsuite name="ASK SVG">
+            <directory>tests/AskSvgTests</directory>
+        </testsuite>
+    </testsuites
+    >
     <php>
-        <env name="APP_ENV" value="blade-icon-testing"/>
+        <env name="APP_ENV" value="ask-svg-testing"/>
     </php>
 </phpunit>
