--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,9 @@
 name: Tests
 on:
   push:
-    branches: 
-    - dev-Test
-    - Test
+    branches: [ dev-Test ]
   pull_request:
-    branches: 
-    - dev-Test
-    - Test
+    branches: [ dev-Test ]
 
 jobs:
   phpunit:
