--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,5 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "test": "vendor/bin/phpunit"
+    "prefer-stable": true
 }
